--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 streamlit
 pandas
 plotly
@@ -7,3 +6,10 @@ requests
 tweepy
 networkx
 pyngrok
+requests
+bs4
+urllib3
+html5lib
+nltk
+matplotlib
+lxml
