--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,8 @@ html5lib
 nltk
 matplotlib
 lxml
-
+yfinance
+jupyterlab
 nltk.download('vader_lexicon')
+#conda install jupyterlab
+#conda install nb_conda
